[tool.poetry]
name = "transformer-example"
version = "0.1.0"
description = ""
authors = ["Aikepaer Abuduweili <abdvls@gmail.com>"]
readme = "README.md"
packages = [{include = "transformer_example"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.4"
torch = "^2.0.0"
torchvision = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
